assets/scss/_masthead.scss
.masthead {
  & {color: $white; font: 300 22px $base-font;}

  .touch &, .no-js & {
    background: $red-bg url($img-path + 'header-bg.gif') no-repeat center top;
    background-size: cover;    
  }

  p {margin: 40px 0;}

  .lead {
    & {
      margin: 60px 0 70px;
      text-align: center;
      text-shadow: 1px 2px $red-bg;
    }
    
    a {
      border-bottom: 2px solid $white;
      font-weight: bold;
      color: $white;
      text-decoration: none;

      @include transition(border .2s);
      
      &:hover, &:focus {border-color: transparent;}
    }

    @media (min-width: $screen-medium) {
      a {
        padding-left: 41px;
        min-height: 36px;
        display: inline-block;
        background: url($img-path + 'icon-event.png') no-repeat left top;
      }
    }
  }
}

.masthead .container {
  @media (max-width: $screen-small-max) {
    padding-bottom: 60px;
  }

  @media (min-width: $screen-medium) {
    padding-top: 131px;
    padding-bottom: 204px;
  }
}

.logo {
  $width: 494px;
  $height: 226px;

  & {
    margin: 0 auto;
    line-height: 1;
    width: $width;
    height: $height;
    text-align: center;
  }

  > a {
    @include retina('logo-full', $width, $height);
    color: #fff;

    /* Image replacement */
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;

    display: block;
    width: $width;
    height: $height;
    color: $white;
  }

  @media (max-width: $screen-small-max) {
    $width: 40px;
    $height: 68px;

    &, > a {
      width: $width;
      height: $height;
    }
    
    > a {@include retina('logo-small', $width, $height);}
  }
}

.signup {
  $input-width: 360px;
  $input-margin: 20px;
  $input-border: 3px;

  & {
    @extend .clearfix;
    position: relative;
    margin: 0 auto;
    text-align: center;
  }

  @media (max-width: $screen-small-max) {
    &, input, button {width: 100% !important;}
  }

  input, button {
    @include transition(all .1s ease-in-out);
    @include box-sizing(border-box);

    border: $input-border solid $white;
    font: italic bold 20px/1 $base-font;
  }

  input {
    width: $input-width;
    padding: 15px 20px;
    background: transparent;
    color: inherit;
    outline: 0;
    border-radius: 50px;

    @include placeholder {
      color: rgba($white, .75);
      line-height: 1.25;
      text-transform: uppercase;
    }

    @media (max-width: $screen-small-max) {margin-bottom: 20px;}
    @media (min-width: $screen-medium) {
      &[type="email"] {padding-right: 100px;}
      &:first-child {margin-right: $input-margin;}
    }
  }

  button {
    & {
      @include button;
      background: $white;
      color: $red-bg;
      outline: none;
    }

    &:hover, &:active, &:focus {background: transparent; color: $white;}

    @media (min-width: $screen-medium) {position: absolute; top: 0; right: 127px;}
  }
}

.response {text-align: center;}

#error-response {
  color: $gray-darker;
  font-weight: bold;
}

